[gd_scene load_steps=4 format=3]

[ext_resource type="Script" path="res://scripts/settings_menu.gd" id="1_settings"]
[ext_resource type="Theme" path="res://resources/ui/game_theme.tres" id="2_theme"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_section_header"]
bg_color = Color(0.15, 0.12, 0.22, 0.5)
border_width_bottom = 2
border_color = Color(0.45, 0.35, 0.65, 0.5)
corner_radius_top_left = 6
corner_radius_top_right = 6
content_margin_left = 10.0
content_margin_top = 8.0
content_margin_right = 10.0
content_margin_bottom = 8.0

[node name="SettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_theme")
script = ExtResource("1_settings")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.08, 0.06, 0.12, 1)

[node name="GradientOverlay" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.12, 0.08, 0.18, 0.3)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(550, 0)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 35
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 35
theme_override_constants/margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 18

[node name="TitleContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Title" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/TitleContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.95, 0.85, 0.65, 1)
theme_override_colors/font_shadow_color = Color(0.2, 0.15, 0.35, 0.6)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_font_sizes/font_size = 36
text = "Settings"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="SettingsContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 16

[node name="TextSectionLabel" type="PanelContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/SettingsContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_section_header")

[node name="Label" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/SettingsContainer/TextSectionLabel"]
layout_mode = 2
theme_override_colors/font_color = Color(0.75, 0.65, 0.85, 1)
theme_override_font_sizes/font_size = 14
text = "TEXT"

[node name="TextSpeedContainer" type="HBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/SettingsContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="TextSpeedLabel" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/SettingsContainer/TextSpeedContainer"]
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
text = "Text Speed"
vertical_alignment = 1

[node name="TextSpeedSlider" type="HSlider" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/SettingsContainer/TextSpeedContainer"]
custom_minimum_size = Vector2(220, 24)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = 1.0
max_value = 10.0
step = 1.0
value = 7.0

[node name="TextSpeedValue" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/SettingsContainer/TextSpeedContainer"]
custom_minimum_size = Vector2(35, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.75, 0.65, 0.85, 1)
text = "7"
horizontal_alignment = 2
vertical_alignment = 1

[node name="AutoAdvanceContainer" type="HBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/SettingsContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="AutoAdvanceLabel" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/SettingsContainer/AutoAdvanceContainer"]
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
text = "Auto-Advance"
vertical_alignment = 1

[node name="AutoAdvanceCheck" type="CheckBox" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/SettingsContainer/AutoAdvanceContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Enabled"

[node name="AutoAdvanceDelay" type="SpinBox" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/SettingsContainer/AutoAdvanceContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
min_value = 0.5
max_value = 5.0
step = 0.5
value = 1.5
suffix = "s"

[node name="AudioSectionLabel" type="PanelContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/SettingsContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_section_header")

[node name="Label" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/SettingsContainer/AudioSectionLabel"]
layout_mode = 2
theme_override_colors/font_color = Color(0.75, 0.65, 0.85, 1)
theme_override_font_sizes/font_size = 14
text = "AUDIO"

[node name="MasterVolumeContainer" type="HBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/SettingsContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="MasterVolumeLabel" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/SettingsContainer/MasterVolumeContainer"]
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
text = "Master"
vertical_alignment = 1

[node name="MasterVolumeSlider" type="HSlider" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/SettingsContainer/MasterVolumeContainer"]
custom_minimum_size = Vector2(220, 24)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 100.0
step = 5.0
value = 100.0

[node name="MasterVolumeValue" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/SettingsContainer/MasterVolumeContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.75, 0.65, 0.85, 1)
text = "100%"
horizontal_alignment = 2
vertical_alignment = 1

[node name="MusicVolumeContainer" type="HBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/SettingsContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="MusicVolumeLabel" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/SettingsContainer/MusicVolumeContainer"]
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
text = "Music"
vertical_alignment = 1

[node name="MusicVolumeSlider" type="HSlider" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/SettingsContainer/MusicVolumeContainer"]
custom_minimum_size = Vector2(220, 24)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 100.0
step = 5.0
value = 80.0

[node name="MusicVolumeValue" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/SettingsContainer/MusicVolumeContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.75, 0.65, 0.85, 1)
text = "80%"
horizontal_alignment = 2
vertical_alignment = 1

[node name="SFXVolumeContainer" type="HBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/SettingsContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="SFXVolumeLabel" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/SettingsContainer/SFXVolumeContainer"]
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
text = "Sound Effects"
vertical_alignment = 1

[node name="SFXVolumeSlider" type="HSlider" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/SettingsContainer/SFXVolumeContainer"]
custom_minimum_size = Vector2(220, 24)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 100.0
step = 5.0
value = 80.0

[node name="SFXVolumeValue" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/SettingsContainer/SFXVolumeContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.75, 0.65, 0.85, 1)
text = "80%"
horizontal_alignment = 2
vertical_alignment = 1

[node name="DisplaySectionLabel" type="PanelContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/SettingsContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_section_header")

[node name="Label" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/SettingsContainer/DisplaySectionLabel"]
layout_mode = 2
theme_override_colors/font_color = Color(0.75, 0.65, 0.85, 1)
theme_override_font_sizes/font_size = 14
text = "DISPLAY"

[node name="FullscreenContainer" type="HBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/SettingsContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="FullscreenLabel" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/SettingsContainer/FullscreenContainer"]
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
text = "Fullscreen"
vertical_alignment = 1

[node name="FullscreenCheck" type="CheckBox" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/SettingsContainer/FullscreenContainer"]
layout_mode = 2
text = "Enabled"

[node name="HSeparator4" type="HSeparator" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="BackButton" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Back"
